<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/drawer_menu_group_first"
            android:checkableBehavior="single">
        <item android:id="@+id/drawer_menu_item_calendar"
              android:icon="@drawable/ic_action_calendar_year_zoom"
              android:checked="false"
              android:title="Calendar"
              tools:ignore="HardcodedText"/>

        <item android:id="@+id/drawer_menu_item_my_account"
              android:icon="@drawable/ic_action_social_person"
              android:checked="false"
              android:title="My Account"
              tools:ignore="HardcodedText"/>

        <item android:id="@+id/drawer_menu_item_guidelines_and_policies"
              android:icon="@drawable/ic_action_list_info"
              android:checked="false"
              android:title="Library Booking Policies"
              tools:ignore="HardcodedText"/>

    </group>

    <group android:id="@+id/drawer_menu_group_second"
            android:checkableBehavior="single">
        <item android:id="@+id/drawer_menu_item_about"
              android:icon="@drawable/ic_action_mobile_zoom"
              android:checked="false"
              android:title="About"
              tools:ignore="HardcodedText"/>
    </group>
</menu>