<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/calendar_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
            android:id="@+id/calendar_content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <!-- All the calendar content gets swapped out or replaced to here -->

    </FrameLayout>

</android.support.v4.widget.SwipeRefreshLayout>
