<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about_description">
        Hey, thanks for checking out this page.\n\n

        I\'m a UOIT Comp Sci student and this is my first android app and first real large Open Source project.
        Sorry if there are any bugs but I hope you find the app useful.\n\n

        If you\'re interested in contributing or just checking out the code, please check out the Project Page
        for more information. I\'ve tried to make setting up the environment as easy as possible.\n\n

        Check out my blog below to read more on the adventures of getting this thing off the ground and the perils of
        running an Open Source project.\n\n

        If you have any suggestions/comments don\'t forget to share them on the Project Page below\n\n

        Cheers!
    </string>
</resources>
