<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:fitsSystemWindows="true"
        android:layout_height="match_parent">

    <android.support.v7.widget.LinearLayoutCompat
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <FrameLayout
                android:layout_weight="1"
                android:id="@+id/mainactivity_content_frame"
                android:layout_width="match_parent"
                android:layout_height="0dp">

            <!-- All the main content gets swapped out or replaced to here -->

        </FrameLayout>

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.design.widget.NavigationView
            android:id="@+id/navigation_view"
            android:layout_height="match_parent"
            android:layout_width="wrap_content"
            android:layout_gravity="start" />

</android.support.v4.widget.DrawerLayout>
