<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.objectivetruth.uoitlibrarybooking.MainActivity" >

<!--    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never"/>-->
    <item
        android:id="@+id/refresh_calendar"
        android:orderInCategory="50"
        android:title="@string/refresh_label"
        android:icon="@drawable/ic_action_av_replay"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/help_calendar"
        android:orderInCategory="30"
        android:title="Help"
        android:icon="@drawable/ic_action_action_help"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/user_account"
        android:orderInCategory="20"
        android:title="Account"
        android:icon="@drawable/ic_action_social_person"
        app:showAsAction="always"
        />

</menu>
