...
<!--    <com.objectivetruth.uoitlibrarybooking.userinterface.common.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text='@string/my_account_logged_in_as_word'
            android:id="@+id/logged_in_as"
            android:layout_below="@+id/titleMyAccount"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/my_account_movement_frame" />

    <com.objectivetruth.uoitlibrarybooking.userinterface.common.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
...
